BLZG-1461 add the required jetty dependencies for the tests